--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -8,23 +8,41 @@
             name="newsitemmodel"
             type="com.gurus.sciencereads.viewmodel.Article"/>
     </data>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <android.support.v7.widget.CardView
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+<LinearLayout
+    android:layout_marginHorizontal="20dp"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right"
+        app:lottie_autoPlay="false"
+        app:lottie_loop="false"
+        app:lottie_fileName="lottie_pink_heart.json"/>
     <ImageView
         android:id="@+id/imageView"
-        android:layout_centerInParent="true"
+        android:adjustViewBounds="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_centerInParent="true"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:fontFamily="cursive"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
-</RelativeLayout>
+</LinearLayout>
+    </android.support.v7.widget.CardView>
+
 </layout>
